--- a/ekstra-komputer/materi/evaluasi.html
+++ b/ekstra-komputer/materi/evaluasi.html
@@ -154,7 +154,7 @@
     <div id="quiz" style="display:none;"></div>
   </div>
 
-  <a href="materi.html" class="tombol-home" title="Kembali">
+  <a href="halaman-materi.html" class="tombol-home" title="Kembali">
     <img src="https://i.imgur.com/QEJbOve.png" alt="Home">
   </a>
 
@@ -290,3 +290,4 @@
   </script>
 </body>
 </html>
+
