--- a/ekstra-komputer/materi/evaluasi.html
+++ b/ekstra-komputer/materi/evaluasi.html
@@ -246,7 +246,7 @@
             <span class='nilai-besar ${warna}'>${nilai}</span>
             <div>${pesan}</div><br>
             <button onclick='location.reload()'>🔄 Ulangi</button>
-            <button onclick="window.location.href='materi.html'">🏠 Selesai</button>
+            <button onclick="window.location.href='halaman-materi.html'">🏠 Selesai</button>
           </div>`;
         progress.style.display = 'none';
         return;
@@ -290,4 +290,5 @@
   </script>
 </body>
 </html>
+
 
