--- a/ekstra-komputer/materi/Soal-Menghidupkan_dan_Mematikan_Komputer_dengan_Benar.html
+++ b/ekstra-komputer/materi/Soal-Menghidupkan_dan_Mematikan_Komputer_dengan_Benar.html
@@ -272,7 +272,7 @@
     }
 
     function selesaiKuis(){
-      window.location.href="materi.html";
+      window.location.href="halaman-materi.html";
     }
 
     function kirimNilai(nilai){
@@ -297,4 +297,5 @@
   </script>
 </body>
 </html>
+
 
