--- a/ekstra-komputer/materi/halaman-materi.html
+++ b/ekstra-komputer/materi/halaman-materi.html
@@ -21,6 +21,7 @@
       align-items: center;
       justify-content: space-between;
       padding: 10px 20px;
+      position: relative;
     }
 
     header img {
@@ -32,6 +33,63 @@
       flex: 1;
       text-align: center;
       font-size: 1.8em;
+    }
+
+    /* Tombol navigasi (Home & Back) */
+    .nav-buttons {
+      position: fixed;
+      bottom: 20px;
+      left: 0;
+      right: 0;
+      display: flex;
+      justify-content: space-between;
+      padding: 0 20px;
+      z-index: 100;
+    }
+
+    .nav-buttons a {
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 50%;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-decoration: none;
+      transition: transform 0.2s;
+    }
+
+    .nav-buttons a:hover {
+      transform: scale(1.1);
+    }
+
+    .nav-buttons img {
+      width: 60px;
+      height: 60px;
+      object-fit: contain;
+    }
+
+    /* Responsif */
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 1.3em;
+      }
+
+      header img {
+        width: 45px;
+        height: 45px;
+      }
+
+      .nav-buttons img {
+        width: 45px;
+        height: 45px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .nav-buttons img {
+        width: 40px;
+        height: 40px;
+      }
     }
 
     .container {
@@ -62,6 +120,13 @@
 
     .icon {
       font-size: 50px;
+      margin-bottom: 10px;
+    }
+
+    .icon img {
+      width: 60px;
+      height: 60px;
+      object-fit: contain;
     }
 
     .card h2 {
@@ -76,56 +141,6 @@
       margin-top: 40px;
       font-weight: bold;
     }
-
-    /* Tombol melayang */
-    .floating-btn {
-      position: fixed;
-      z-index: 999;
-      border-radius: 50%;
-      cursor: grab;
-      touch-action: none;
-    }
-
-    .home-btn {
-      bottom: 100px;
-      left: 15px;
-      width: 70px;
-      height: 70px;
-    }
-
-    .back-btn {
-      bottom: 15px;
-      left: 15px;
-      width: 70px;
-      height: 70px;
-    }
-
-    /* ✅ Pelajar diperbesar dan agak ke bawah */
-    .pelajar-btn {
-      lefth: 30px;
-      bottom: 120px; /* posisinya agak ke bawah dari atas */
-      width: 300px;  /* diperbesar dari 70px ke 120px */
-      height: 300px;
-    }
-
-    img.btn-icon {
-      width: 100%;
-      height: auto;
-      border-radius: 50%;
-    }
-
-    @media (max-width: 600px) {
-      .home-btn, .back-btn {
-        width: 55px;
-        height: 55px;
-      }
-      .pelajar-btn {
-        width: 190px;
-        height: 190px;
-        lefth: 20px;
-        bottom: 80px;
-      }
-    }
   </style>
 </head>
 <body>
@@ -137,7 +152,7 @@
   </header>
 
   <div class="container">
-    <a href="Menghidupkan_dan_Mematikan_Komputer_dengan_Benar.html" class="card">
+    <a href="menghidupkan_dan_mematikan_komputer_dengan_benar.html" class="card">
       <div class="icon">💡</div>
       <h2>Menghidupkan Komputer</h2>
       <p>Pelajari langkah-langkah menghidupkan dan mematikan komputer dengan benar.</p>
@@ -149,9 +164,11 @@
       <p>Belajar cara membuat folder baru di File Explorer.</p>
     </a>
 
-    <a href="Langkah-Langkah_Menjalankan_Microsoft_Word.html" class="card">
-      <div class="icon">📄</div>
-      <h2>Menjalankan Microsoft Word</h2>
+    <a href="menjalankan_microsoft_word.html" class="card">
+      <div class="icon">
+        <img src="https://i.imgur.com/4a3adyG.png" alt="Logo Microsoft Word">
+      </div>
+      <h2>Microsoft Word</h2>
       <p>Kenali langkah-langkah membuka dan menggunakan Microsoft Word.</p>
     </a>
 
@@ -166,81 +183,15 @@
     Disusun oleh Guru TIK UPT SD NEGERI 160 GRESIK 💻
   </footer>
 
-  <!-- Tombol Home -->
-  <a href="../daftar-isi.html" class="floating-btn home-btn" id="homeBtn">
-    <img src="https://i.imgur.com/Nc3RsIH.png" alt="Home" class="btn-icon">
-  </a>
-
-  <!-- Tombol Back -->
-  <a href="../materi.html" class="floating-btn back-btn" id="backBtn">
-    <img src="https://i.imgur.com/QEJbOve.png" alt="Back" class="btn-icon">
-  </a>
-
-  <!-- Tombol Pelajar -->
-  <div class="floating-btn pelajar-btn" id="pelajarBtn">
-    <img src="https://i.imgur.com/xi8XIsE.png" alt="Pelajar" class="btn-icon">
+  <!-- Tombol Navigasi -->
+  <div class="nav-buttons">
+    <a href="materi.html">
+      <img src="https://i.imgur.com/QEJbOve.png" alt="Tombol Back">
+    </a>
+    <a href="daftar-isi.html">
+      <img src="https://i.imgur.com/Nc3RsIH.png" alt="Tombol Home">
+    </a>
   </div>
-
-  <script>
-    // Fungsi agar tombol bisa digeser (drag)
-    function makeDraggable(element) {
-      let pos1 = 0, pos2 = 0, pos3 = 0, pos4 = 0;
-      element.onmousedown = dragMouseDown;
-      element.ontouchstart = dragTouchStart;
-
-      function dragMouseDown(e) {
-        e.preventDefault();
-        pos3 = e.clientX;
-        pos4 = e.clientY;
-        document.onmouseup = closeDragElement;
-        document.onmousemove = elementDrag;
-      }
-
-      function dragTouchStart(e) {
-        const touch = e.touches[0];
-        pos3 = touch.clientX;
-        pos4 = touch.clientY;
-        document.ontouchend = closeDragElement;
-        document.ontouchmove = elementTouchDrag;
-      }
-
-      function elementDrag(e) {
-        e.preventDefault();
-        pos1 = pos3 - e.clientX;
-        pos2 = pos4 - e.clientY;
-        pos3 = e.clientX;
-        pos4 = e.clientY;
-        element.style.top = (element.offsetTop - pos2) + "px";
-        element.style.left = (element.offsetLeft - pos1) + "px";
-      }
-
-      function elementTouchDrag(e) {
-        const touch = e.touches[0];
-        pos1 = pos3 - touch.clientX;
-        pos2 = pos4 - touch.clientY;
-        pos3 = touch.clientX;
-        pos4 = touch.clientY;
-        element.style.top = (element.offsetTop - pos2) + "px";
-        element.style.left = (element.offsetLeft - pos1) + "px";
-      }
-
-      function closeDragElement() {
-        document.onmouseup = null;
-        document.onmousemove = null;
-        document.ontouchend = null;
-        document.ontouchmove = null;
-      }
-    }
-
-    // Aktifkan drag untuk semua tombol
-    makeDraggable(document.getElementById("homeBtn"));
-    makeDraggable(document.getElementById("backBtn"));
-    makeDraggable(document.getElementById("pelajarBtn"));
-  </script>
 
 </body>
 </html>
-
-
-
-
