--- a/ekstra-komputer/materi/halaman-materi.html
+++ b/ekstra-komputer/materi/halaman-materi.html
@@ -185,13 +185,14 @@
 
   <!-- Tombol Navigasi -->
   <div class="nav-buttons">
-    <a href="materi.html">
+    <a href="../materi.html">
       <img src="https://i.imgur.com/QEJbOve.png" alt="Tombol Back">
     </a>
-    <a href="daftar-isi.html">
+    <a href="../daftar-isi.html">
       <img src="https://i.imgur.com/Nc3RsIH.png" alt="Tombol Home">
     </a>
   </div>
 
 </body>
 </html>
+
