--- a/ekstra-komputer/materi/menjalankan-mengenal-ms-word.html
+++ b/ekstra-komputer/materi/menjalankan-mengenal-ms-word.html
@@ -106,7 +106,7 @@
 
     <!-- Kartu baru 2: Mengenal Ms Word -->
   
-<a href="menjalankan_ms_word.html" class="card">
+<a href="Langkah-Langkah_Menjalankan_Microsoft_Word.html" class="card">
       <div class="icon">
         <img src="https://i.imgur.com/4a3adyG.png" alt="Logo Microsoft Word">
       </div>
@@ -122,3 +122,4 @@
 
 </body>
 </html>
+
