--- a/ekstra-komputer/materi/Langkah-Langkah_Menjalankan_Microsoft_Word.html
+++ b/ekstra-komputer/materi/Langkah-Langkah_Menjalankan_Microsoft_Word.html
@@ -258,7 +258,7 @@
 
   <script>
     function goHome() { window.location.href = "../daftar-isi.html"; }
-    function goBack() { window.location.href = "halaman-materi.html"; }
+    function goBack() { window.location.href = "menjalankan-mengenal-ms-word.html"; }
 
     function makeDraggable(el) {
       let pos = { top: 0, left: 0, x: 0, y: 0 };
@@ -303,3 +303,4 @@
   </script>
 </body>
 </html>
+
