--- a/ekstra-komputer/materi/menjalankan-mengenal-ms-word.html
+++ b/ekstra-komputer/materi/menjalankan-mengenal-ms-word.html
@@ -96,7 +96,7 @@
 
   <div class="container">
      <!-- Kartu baru 1: Menjalankan Ms Word -->
-      <a href="mengenal_ms_word.html" class="card">
+      <a href="Nama-dan-Fungsi-Toolbar-Microsoft-Word.html" class="card">
       <div class="icon">
         <img src="https://i.imgur.com/4a3adyG.png" alt="Logo Microsoft Word">
       </div>
@@ -122,4 +122,5 @@
 
 </body>
 </html>
+
 
