--- a/ekstra-komputer/materi/Nama-dan-Fungsi-Toolbar-Microsoft-Word.html
+++ b/ekstra-komputer/materi/Nama-dan-Fungsi-Toolbar-Microsoft-Word.html
@@ -12,30 +12,33 @@
       --grad2: linear-gradient(135deg, #a1c4fd, #c2e9fb);
       --title-grad: linear-gradient(135deg, #6dd5fa, #2980b9);
       --footer-grad: linear-gradient(135deg, #a8ff78, #78ffd6);
-}
-.text-putih {
-  background-color: white;
-  padding: 10px 14px;
-  border-radius: 8px;
-  box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-}
-.kotak-putih {
-  background-color: white;
-  padding: 16px 20px;
-  border-radius: 12px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-  margin-top: 10px;
-  text-align: justify;
-}
-
-.kotak-putih img {
-  display: block;
-  max-width: 100%;
-  height: auto;
-  margin: 12px auto 0;
-  border-radius: 10px;
-  box-shadow: 0 3px 10px rgba(0,0,0,0.1);
     }
+
+    .text-putih {
+      background-color: white;
+      padding: 10px 14px;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    .kotak-putih {
+      background-color: white;
+      padding: 16px 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      margin-top: 10px;
+      text-align: justify;
+    }
+
+    .kotak-putih img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+      margin: 12px auto 0;
+      border-radius: 10px;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.1);
+    }
+
     body {
       margin: 0;
       font-family: "Poppins", sans-serif;
@@ -76,7 +79,7 @@
     }
 
     .section {
-      background: rgba(255,255,255,0.0); /* transparan */
+      background: rgba(255,255,255,0.0);
       border-radius: 14px;
       padding: 20px;
       margin-bottom: 25px;
@@ -119,13 +122,8 @@
       margin-top: 0;
     }
 
-    ul {
-      margin: 10px 0 10px 20px;
-    }
-
-    li {
-      margin-bottom: 8px;
-    }
+    ul { margin: 10px 0 10px 20px; }
+    li { margin-bottom: 8px; }
 
     .example {
       background: #f0faff;
@@ -154,33 +152,76 @@
       h2 { font-size: 18px; }
       h3 { font-size: 16px; }
     }
-.img-ribbon {
-  display: block;
-  max-width: 100%;     /* agar gambar tidak melebihi lebar layar */
-  height: auto;        /* mempertahankan proporsi gambar */
-  margin: 15px auto;   /* memberi jarak dan membuatnya di tengah */
-  border-radius: 10px; /* sudut sedikit membulat agar halus */
-  box-shadow: 0 3px 12px rgba(0,0,0,0.1);
-border: 3px solid #1f6feb; /* garis pinggir biru */
-}
 
-/* Saat layar kecil seperti HP */
-@media (max-width: 768px) {
-  .img-ribbon {
-    max-width: 95%;
+    .img-ribbon {
+      display: block;
+      max-width: 100%;
+      height: auto;
+      margin: 15px auto;
+      border-radius: 10px;
+      box-shadow: 0 3px 12px rgba(0,0,0,0.1);
+      border: 3px solid #1f6feb;
+    }
+
+    @media (max-width: 768px) { .img-ribbon { max-width: 95%; } }
+    @media (max-width: 480px) { .img-ribbon { max-width: 100%; } }
+
+    /* 🔹 Tombol draggable (Home & Back) */
+    .draggable {
+      position: fixed;
+      z-index: 1000;
+      width: 60px;
+      height: 60px;
+      cursor: move;
+      border-radius: 50%;
+      transition: transform 0.2s;
+    }
+    .draggable:hover { transform: scale(1.1); }
+
+    .home-btn { bottom: 100px; right: 20px; }
+    .back-btn { bottom: 30px; right: 20px; }
+
+/* Responsif untuk HP potrait dan landscape */
+@media screen and (max-width: 480px) and (orientation: portrait) {
+  .container {
+    margin: 10px;
+    padding: 15px;
+  }
+  .title-box { font-size: 18px; padding: 14px; }
+  .footer-box { font-size: 12px; padding: 10px; }
+  .draggable {
+    width: 50px;
+    height: 50px;
   }
 }
 
-/* Saat layar lebih kecil lagi (HP potrait) */
-@media (max-width: 480px) {
-  .img-ribbon {
-    max-width: 100%;
+@media screen and (max-width: 820px) and (orientation: landscape) {
+  .container {
+    margin: 15px auto;
+    padding: 20px;
+    max-width: 95%;
+  }
+  .title-box { font-size: 20px; }
+  .footer-box { font-size: 13px; }
+  .draggable {
+    width: 50px;
+    height: 50px;
   }
 }
 
   </style>
 </head>
 <body>
+  <!-- 🔹 Tombol Home -->
+  <a href="../daftar-isi.html">
+    <img src="https://i.imgur.com/Nc3RsIH.png" class="draggable home-btn" id="homeBtn" alt="Home">
+  </a>
+
+  <!-- 🔹 Tombol Back -->
+  <a href="menjalankan-mengenal-ms-word.html">
+    <img src="https://i.imgur.com/QEJbOve.png" class="draggable back-btn" id="backBtn" alt="Back">
+  </a>
+
   <div class="container">
     <header>
       <div class="title-box">🖥️ Nama dan Fungsi Toolbar Microsoft Word</div>
@@ -189,20 +230,20 @@ border: 3px solid #1f6feb; /* garis pinggir biru */
     <div class="section">
       <h2>🖥️ 1. Pengertian Toolbar</h2>
       <div class="kotak-putih">
-  <p>
-    Toolbar adalah deretan tombol perintah yang ada di bagian atas jendela Microsoft Word. 
-    Fungsinya untuk memudahkan kita mengerjakan dokumen, seperti mengetik, mengatur huruf, menyimpan, atau mencetak.
-  </p>
-  <p>
-    Toolbar ini juga disebut <b>Ribbon</b>, dan terdiri dari beberapa tab seperti 
-    <b>Home</b>, <b>Insert</b>, <b>Page Layout</b>, dan lainnya.
-  </p>
-  <img src="https://i.imgur.com/i9eqt1y.png" alt="Gambar Ribbon Microsoft Word" class="img-ribbon">
+        <p>
+          Toolbar adalah deretan tombol perintah yang ada di bagian atas jendela Microsoft Word. 
+          Fungsinya untuk memudahkan kita mengerjakan dokumen, seperti mengetik, mengatur huruf, menyimpan, atau mencetak.
+        </p>
+        <p>
+          Toolbar ini juga disebut <b>Ribbon</b>, dan terdiri dari beberapa tab seperti 
+          <b>Home</b>, <b>Insert</b>, <b>Page Layout</b>, dan lainnya.
+        </p>
+        <img src="https://i.imgur.com/i9eqt1y.png" alt="Gambar Ribbon Microsoft Word" class="img-ribbon">
+      </div>
     </div>
 
     <div class="section">
       <h2>📘 2. Nama dan Fungsi Beberapa Toolbar Penting</h2>
-
       <div class="sub-section">
         <h3>🏠 A. Tab Home</h3>
         <p>Berisi perintah dasar untuk mengatur teks:</p>
@@ -212,66 +253,86 @@ border: 3px solid #1f6feb; /* garis pinggir biru */
           <li><b>Underline (U)</b> → Memberi garis bawah</li>
           <li><b>Font Size</b> → Mengatur ukuran huruf</li>
           <li><b>Font Color</b> → Mengubah warna huruf</li>
-          <li><b>Align</b> → Mengatur posisi teks (rata kiri, tengah, kanan)</li>
-          <li><b>Bullets/Numbering</b> → Membuat daftar dengan tanda atau angka</li>
+          <li><b>Align</b> → Mengatur posisi teks</li>
+          <li><b>Bullets/Numbering</b> → Membuat daftar</li>
         </ul>
-        <div class="example">🧠 Contoh: Kita bisa menulis judul tugas dengan huruf besar dan tebal agar lebih jelas.</div>
       </div>
 
       <div class="sub-section">
         <h3>📎 B. Tab Insert</h3>
         <p>Berisi perintah untuk menambahkan sesuatu ke dokumen:</p>
         <ul>
-          <li><b>Picture</b> → Menyisipkan gambar dari komputer</li>
-          <li><b>Shapes</b> → Menambahkan bentuk (lingkaran, kotak, panah, dll)</li>
+          <li><b>Picture</b> → Menyisipkan gambar</li>
+          <li><b>Shapes</b> → Menambahkan bentuk</li>
           <li><b>Table</b> → Membuat tabel</li>
-          <li><b>WordArt</b> → Membuat tulisan bergaya unik</li>
+          <li><b>WordArt</b> → Membuat tulisan bergaya</li>
         </ul>
-        <div class="example">🧠 Contoh: Saat membuat laporan, kita bisa menambah gambar agar lebih menarik.</div>
       </div>
 
       <div class="sub-section">
         <h3>📄 C. Tab Page Layout / Layout</h3>
-        <p>Digunakan untuk mengatur tampilan halaman:</p>
         <ul>
-          <li><b>Margins</b> → Mengatur jarak tepi kertas</li>
-          <li><b>Orientation</b> → Mengubah posisi kertas (Potrait atau Landscape)</li>
-          <li><b>Size</b> → Mengatur ukuran kertas</li>
+          <li><b>Margins</b> → Mengatur jarak tepi</li>
+          <li><b>Orientation</b> → Ubah posisi kertas</li>
+          <li><b>Size</b> → Atur ukuran kertas</li>
         </ul>
-        <div class="example">🧠 Contoh: Kalau mau membuat brosur, kita bisa ubah posisi kertas jadi landscape.</div>
       </div>
 
       <div class="sub-section">
         <h3>🧰 D. Tab Review</h3>
-        <p>Untuk memeriksa dan mengoreksi tulisan:</p>
         <ul>
-          <li><b>Spelling & Grammar</b> → Mengecek kesalahan ejaan</li>
-          <li><b>Thesaurus</b> → Mencari sinonim (kata lain yang mirip artinya)</li>
+          <li><b>Spelling & Grammar</b> → Mengecek ejaan</li>
+          <li><b>Thesaurus</b> → Mencari sinonim</li>
         </ul>
-        <div class="example">🧠 Contoh: Saat mengetik, jika ada garis merah di bawah kata, berarti ada kesalahan ejaan.</div>
       </div>
 
       <div class="sub-section">
         <h3>🖨️ E. Tab File</h3>
-        <p>Berisi perintah untuk mengelola dokumen:</p>
         <ul>
-          <li><b>New</b> → Membuat dokumen baru</li>
-          <li><b>Open</b> → Membuka dokumen lama</li>
-          <li><b>Save / Save As</b> → Menyimpan dokumen</li>
-          <li><b>Print</b> → Mencetak dokumen</li>
+          <li><b>New</b> → Dokumen baru</li>
+          <li><b>Open</b> → Buka dokumen lama</li>
+          <li><b>Save / Save As</b> → Simpan dokumen</li>
+          <li><b>Print</b> → Cetak dokumen</li>
         </ul>
-        <div class="example">🧠 Contoh: Setelah mengetik tugas, jangan lupa klik Save supaya hasilnya tidak hilang!</div>
       </div>
     </div>
 
     <div class="section">
       <h2>⭐ Kesimpulan</h2>
- <div class="kotak-putih">
-      <p>Toolbar Microsoft Word sangat membantu kita dalam mengetik dan mengedit dokumen. Dengan mengenal fungsi setiap toolbar, kita bisa bekerja lebih cepat dan rapi.</p>
+      <div class="kotak-putih">
+        <p>Toolbar Microsoft Word sangat membantu kita dalam mengetik dan mengedit dokumen. Dengan mengenal fungsi setiap toolbar, kita bisa bekerja lebih cepat dan rapi.</p>
+      </div>
     </div>
-</div>
 
     <div class="footer-box">🏫 UPT SD NEGERI 160 GRESIK 🏫</div>
   </div>
+
+  <script>
+    // 🔹 Fungsi drag tombol
+    function makeDraggable(el) {
+      let isDragging = false, x, y;
+
+      el.addEventListener('mousedown', (e) => {
+        isDragging = true;
+        x = e.clientX - el.offsetLeft;
+        y = e.clientY - el.offsetTop;
+        el.style.transition = 'none';
+      });
+
+      document.addEventListener('mousemove', (e) => {
+        if (!isDragging) return;
+        el.style.left = e.clientX - x + 'px';
+        el.style.top = e.clientY - y + 'px';
+      });
+
+      document.addEventListener('mouseup', () => {
+        isDragging = false;
+        el.style.transition = 'transform 0.2s';
+      });
+    }
+
+    makeDraggable(document.getElementById('homeBtn'));
+    makeDraggable(document.getElementById('backBtn'));
+  </script>
 </body>
 </html>
